# open_spiel

./: .clang-format  .clang-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .travis.yml  ARMAC_v8.ipynb  Dockerfile  Dockerfile.base  Dockerfile.jupyter  FIRST_TIME_CONTRIBUTOR_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Open_Spiel.srctrlbm  Open_Spiel.srctrldb  Open_Spiel.srctrlprj  PR_SUMMARY.md  Package.resolved  Package.swift  README.md  WINDOWS_INSTALL.md  __init__.py  black.cfg  check_subgame_perfection.py  docker-compose.yml  full_test.py  hswtest.txt  install.sh  noxfile.py  play_gt3.py  pyproject.toml  readthedocs.yml  requirements.txt  run_dice_experiments.sh  run_experiment.sh  run_experiments.py  setup.py  setup_env.sh  test_all.py  (+4 more)
open_spiel/: .gitignore  CMakeLists.txt  Dockerfile.base  IMPLEMENTATION_SUMMARY.py  __init__.py  action_view.cc  action_view.h  canonical_game_strings.cc  canonical_game_strings.h  fog_constants.h  game_parameters.cc  game_parameters.h  install.sh  matrix_game.cc  matrix_game.h  normal_form_game.h  observation_history.cc  observation_history.h  observer.cc  observer.h  path.cc  path.h  policy.cc  policy.h  query.cc  query.h  setup.py  simultaneous_move_game.cc  simultaneous_move_game.h  spiel.cc  spiel.h  spiel_bots.cc  spiel_bots.h  spiel_constants.h  spiel_globals.h  spiel_optional.cc  spiel_optional.h  spiel_utils.cc  spiel_utils.h  tensor_game.cc  (+4 more)
open_spiel/algorithms/: CMakeLists.txt  backward_induction_test.cc  best_response.cc  best_response.h  best_response_test.cc  cfr.cc  cfr.h  cfr_br.cc  cfr_br.h  cfr_br_test.cc  cfr_test.cc  corr_dev_builder.cc  corr_dev_builder.h  corr_dev_builder_test.cc  corr_dist.cc  corr_dist.h  corr_dist_test.cc  deterministic_policy.cc  deterministic_policy.h  deterministic_policy_test.cc  evaluate_bots.cc  evaluate_bots.h  evaluate_bots_test.cc  expected_returns.cc  expected_returns.h  external_sampling_mccfr.cc  external_sampling_mccfr.h  external_sampling_mccfr_test.cc  fsicfr.cc  fsicfr.h  get_all_histories.cc  get_all_histories.h  get_all_histories_test.cc  get_all_infostates.cc  get_all_infostates.h  get_all_states.cc  get_all_states.h  get_all_states_test.cc  get_legal_actions_map.cc  get_legal_actions_map.h  (+66 more)
open_spiel/bots/: CMakeLists.txt  pimc_bot.h  pimc_bot_test.cc
open_spiel/cmake/: FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake  FindProtobuf.cmake  FindTensorflowCC.cmake  SelectLibraryConfigurations.cmake
open_spiel/colabs/: CFR_and_REINFORCE.ipynb  OpenSpielTutorial.ipynb  Open_Spiel_Tutorial.ipynb  boop_alphazero_training.ipynb  boop_dqn_training.ipynb  boop_kataboop_training.ipynb  crowd_modelling_4rooms_MFGsurvey.ipynb  deep_cfr_pytorch.ipynb  gemma_opensial_tic_tac_toe_code_gen.ipynb  install_open_spiel.ipynb  open_spiel_gemma.ipynb  open_spiel_hf_llm.ipynb  rcfr_pytorch.ipynb  rcfr_pytorch_flax.ipynb  research_dqn_flax_pt.ipynb  research_dqn_pytorch.ipynb  research_nfsp_flax_pt.ipynb  research_nfsp_tf_pt.ipynb  test_universal_poker.ipynb
open_spiel/contrib/: CMakeLists.txt  tf_trajectories.cc  tf_trajectories.h  tf_trajectories_example.cc
open_spiel/docs/: Makefile  algorithms.md  alpha_rank.md  api_reference.md  concepts.md  games.md  intro.md  library.md  windows.md
open_spiel/eigen/: CMakeLists.txt  README.md  eigen_basic_test.cc  eigen_binding_test.py  eigen_test_support.h  pyeig.h  pyspiel_eigen_test.cc
open_spiel/evaluation/: CMakeLists.txt  elo.cc  elo.h  elo_test.cc
open_spiel/examples/: CMakeLists.txt  alpha_zero_example.cc  alpha_zero_torch_example.cc  alpha_zero_torch_game_example.cc  benchmark_game.cc  cfr_example.cc  cfr_multi_equilibria_example.cc  count_all_states.cc  dqn_torch_example.cc  example.cc  fsicfr_liars_dice.cc  gtp.cc  imperfect_recall_mccfr.cc  imperfect_recall_mccfr_darkHex.cc  is_mcts_gwhist.cc  marl_example.py  matrix_example.cc  mcts_example.cc  minimax_example.cc  policy_iteration_example.cc  sarsa_example.cc  shared_library_example  shared_library_example.cc  tabular_q_learning_example.cc  tabular_sarsa_example.cc  universal_poker_mccfr_acpc_gamedef_example.cc  value_iteration_example.cc
open_spiel/fog/: CMakeLists.txt  README.md  fog_constants.h  observation_history.cc  observation_history.h  observation_history_test.cc
open_spiel/game_transforms/: CMakeLists.txt  add_noise.cc  add_noise.h  add_noise_test.cc  cached_tree.cc  cached_tree_test.cc  coop_to_1p.cc  coop_to_1p.h  coop_to_1p_test.cc  efg_writer.cc  efg_writer.h  efg_writer_test.cc  game_wrapper.h  misere.cc  misere.h  misere_test.cc  normal_form_extensive_game.cc  normal_form_extensive_game.h  normal_form_extensive_game_test.cc  repeated_game.cc  repeated_game.h  repeated_game_test.cc  restricted_nash_response.cc  restricted_nash_response.h  restricted_nash_response_test.cc  start_at.cc  start_at.h  start_at_test.cc  turn_based_simultaneous_game.cc  turn_based_simultaneous_game.h  turn_based_simultaneous_game_test.cc  with_observation_history.cc  with_observation_history.h  with_observation_history_test.cc  zerosum.cc  zerosum.h  zerosum_test.cc
open_spiel/games/: 2048.cc  2048.h  2048_test.cc  CMakeLists.txt  amazons.cc  amazons.h  amazons_test.cc  backgammon.cc  backgammon.h  backgammon_test.cc  bargaining.cc  bargaining.h  bargaining_instance_generator.cc  bargaining_instances1000.txt  bargaining_test.cc  battleship.cc  battleship.h  battleship_test.cc  battleship_types.cc  battleship_types.h  bd_mines.cc  bd_mines.h  bd_mines_test.cc  blackjack.cc  blackjack.h  blackjack_test.cc  blotto.cc  blotto.h  blotto_test.cc  breakthrough.cc  breakthrough.h  breakthrough_test.cc  bridge.cc  bridge.h  bridge_test.cc  bridge_uncontested_bidding.cc  bridge_uncontested_bidding.h  catan.cc  catan.h  catan_test.cc  (+231 more)
open_spiel/go/: CMakeLists.txt  README.md  example_leduc_test.go  go_open_spiel.cc  go_open_spiel.h  openspiel.go
open_spiel/higc/: CMakeLists.txt  README.md  base64.cc  base64.h  channel.cc  channel.h  example_read.cc  fdstream.hpp  referee.cc  referee.h  referee_test.cc  subprocess.h  subprocess.hpp  tournament.cc  (+2 more)
(+2942 files in other folders)
